fix:[이주영] Review 중 조회 로직 수정